--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -1,12 +1,16 @@
 /**
  * Megamenu Styles
  */
-header {
+/* header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-}
+} */
+
+/* .megamenu-container.mobile {
+  margin-top: 60px;
+} */
 /* Top Bar Desktop Styles */
 .top-bar-desktop {
   display: flex;
@@ -102,6 +106,31 @@ header {
     cursor: pointer;
     margin: 0 2vw;
   }
+
+  .hamburger2025.close-menu-x {
+  background: none;
+  color: #000;
+  position: relative;
+  height: 1em;
+  width: 1.5em;
+  cursor: pointer;
+  margin: 0 2vw;
+}
+  .hamburger2025.close-menu-x::after {
+  content: "X";
+  color: #000;
+  font-size: 2em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 1em;
+  width: 1em;
+  text-align: center;
+  line-height: 1em;
+  pointer-events: none;
+  transition: color 0.2s ease, opacity 0.2s ease, font-size 0.2s ease;
+}
 }
 
 .topbar-menus-container {
