--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -123,13 +123,31 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
   height: 1em;
   width: 1em;
   text-align: center;
   line-height: 1em;
   pointer-events: none;
-  transition: color 0.2s ease, opacity 0.2s ease, font-size 0.2s ease;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.hamburger2025:not(.close-menu-x)::after {
+  content: "X";
+  color: #000;
+  font-size: 2em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
+  height: 1em;
+  width: 1em;
+  text-align: center;
+  line-height: 1em;
+  pointer-events: none;
+  transition: opacity 0.2s ease, transform 0.2s ease;
 }
 }
 
