--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -400,7 +400,7 @@
   padding-left: 1vw;
 }
 
-.dashboard-menu-container .active2025 {
+.dashboard-menu-container .active {
   background-color: #FFE63C;
   color: black;
   border-top-left-radius: 1vw;
@@ -460,6 +460,14 @@
   margin-right: 1.5vw;
 }
 
+.dashboard-dropdown2025 h4 {
+  padding: 0;
+  margin: 0;
+  margin-left: 10px;
+  margin-top: 1em;
+  margin-bottom: .5em;
+}
+
 .dashboard-dropdown2025 ul {
   list-style: none;
   padding: 0;
@@ -514,26 +522,25 @@
   transition: color 0.2s;
 }
 
-.small-menu li:last-child {
+.small-menu li:hover {
+  background-color: #FFE63C;
+  color: black;
+  border-radius: 4px;
+}
+
+.small-menu li:hover, .small-menu li.apply-button{
   background-color: #FFE63C;
   border-radius: 4vw;
   white-space: nowrap;
   flex-shrink: 0;
-}
-
-/* This targets the anchor inside the last li */
-.small-menu li:last-child a,
-.small-menu li:last-child a:hover,
-.small-menu li:last-child a:focus,
-.small-menu li:last-child a:active {
-  color: black !important;
-}
-
-
-
-
-.small-menu a:hover {
   
+    a {
+      color: black;
+    }
+}
+
+.apply-button:hover{
+  background-color: #fff!important;
 }
 
 /* Accessibility */
@@ -1076,10 +1083,3 @@ li.active2025 > a > .dropdown-indicator-mobile::after {
   z-index: 999;
 }
 
-.header-container.desktop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1000;
-}
