yellow hover for search

--- a/megamenu-preact-app/src/styles/megamenu.css
+++ b/megamenu-preact-app/src/styles/megamenu.css
@@ -189,6 +189,10 @@
     text-decoration: none;
   }
 
+  .icon-search2025:hover {
+    color: #ffe600!important;
+  }
+
   a {
     text-decoration: none;
   }
